# wordcounting

./: .gitignore  readme.md
clojure/: README.md  pom.xml  project.clj
clojure/src/word_counting/: core.clj
clojure/test/word_counting/: t_core.clj
haskell-word-counting/: haskell-word-counting.cabal  hlint.hs
haskell-word-counting/src/: Main.hs
haskell-word-counting/test/: PerfTest.hs  TestMain.hs  TestWordCounting.hs  test.txt
haskell-wordcounting/: haskell-wordcounting.cabal  hlint.hs  wordcounting.sublime-project  wordcounting.sublime-workspace
haskell-wordcounting/src/: Main.hs  WordCounting.hs  WordCountingSTMonad.hs
haskell-wordcounting/test/: PerfTest.hs  TestMain.hs  TestWordCounting.hs  TestWordCountingSTMonad.hs
objc/word_counting/: Podfile
objc/word_counting/word_counting/: main.m  word_counting-Prefix.pch
objc/word_counting/word_counting.xcodeproj/: project.pbxproj
objc/word_counting/word_counting.xcworkspace/: contents.xcworkspacedata
python/src/: word_counting.py
scala/: README  pom.xml
scala/src/main/resources/: test.txt
scala/src/main/scala/: Runner.scala  SimpleScalaBenchmark.scala  WordCounting.scala
