name:           progfun
version:        0.0.1
cabal-version:  >= 1.16
build-type:     Simple
license:        AllRightsReserved
license-file:   ""
data-dir:       ""

executable progfun-haskell
  build-depends:     
                    base -any,
                    aeson,
                    attoparsec,
                    bytestring,
                    random,
                    containers,
                    split,
                    text,
                    hashtables == 1.1.0.2,
                    unordered-containers
  buildable:         True
  main-is:           Main.hs
  Default-language:  Haskell2010
  hs-source-dirs:    src
  other-modules:   
                   WordCounting,
                   WordCountingSTMonad

test-suite test-progfun
  build-depends:    
                    HTF == 0.11.*,
                    base,
                    aeson,
                    attoparsec,
                    bytestring,
                    random == 1.0.1.1,
                    containers,
                    hashtables == 1.1.0.2,
                    regex-compat,
                    split,
                    text,
                    unordered-containers,
                   hashtables == 1.1.0.2
  type:              exitcode-stdio-1.0
  Default-language:  Haskell2010
  main-is:           TestMain.hs
  hs-source-dirs:    src, 
                     test
  other-modules:    WordCounting,
                    TestWordCounting,
                    WordCountingSTMonad,
                    TestWordCountingSTMonad

test-suite perf-test
  type:            exitcode-stdio-1.0
  build-depends:   
                   base >= 4,
                   criterion -any,
                   containers,
                   split,
                   bytestring,
                   text,
                   unordered-containers,
                   hashtables == 1.1.0.2,
                   directory
  hs-source-dirs: src test
  main-is:         PerfTest.hs
  Default-language:  Haskell2010
  other-modules:   WordCounting,
                   WordCountingSTMonad
  ghc-options:     -O2
  extensions:      Unsafe

